--- a/shootgame/app/src/main/res/layout/content_main.xml
+++ b/shootgame/app/src/main/res/layout/content_main.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="sorce:0"
+        android:id="@+id/sorce"
         android:layout_below="@+id/life"
         android:textColor="@android:color/holo_red_light"/>
 
