致命错误，一旦点开暂停图片，在英雄死亡是无法返回起始界面，很奇怪

--- a/shootgame/app/src/main/res/layout/content_main.xml
+++ b/shootgame/app/src/main/res/layout/content_main.xml
@@ -22,6 +22,19 @@
         android:id="@+id/sorce"
         android:layout_below="@+id/life"
         android:textColor="@android:color/holo_red_light"/>
+    <com.example.sunpeng.shootgame.Airplane
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/airplane"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="暂停"
+        android:id="@+id/puse"
+        android:textColor="@android:color/holo_red_light"
+        android:layout_alignParentRight="true" />
 
 
 </RelativeLayout>
