--- a/shootgame/app/src/main/res/layout/activity_main2.xml
+++ b/shootgame/app/src/main/res/layout/activity_main2.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    android:id="@+id/game"
     tools:context="com.example.sunpeng.shootgame.MainActivity">
     <Button
         android:layout_width="fill_parent"
