--- a/shootgame/app/src/main/res/layout/activity_main2.xml
+++ b/shootgame/app/src/main/res/layout/activity_main2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,5 +11,50 @@
         android:layout_height="fill_parent"
         android:background="@drawable/start"
         android:id="@+id/start"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="45dp"
+        android:minWidth="150dp"
+        android:text="第一名："
+        android:textSize="25dp"
+        android:drawableLeft="@drawable/airplane"
+        android:id="@+id/frist"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:minWidth="150dp"
+        android:layout_below="@+id/frist"
+        android:text="第一名："
+        android:textSize="25dp"
+        android:drawableLeft="@drawable/airplane"
+        android:id="@+id/scond"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/scond"
+        android:minWidth="150dp"
+        android:text="第一名："
+        android:textSize="25dp"
+        android:drawableLeft="@drawable/airplane"
+        android:id="@+id/thrid"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="300dp"
+        android:drawableLeft="@drawable/airplane"
+        android:id="@+id/userName"
+        android:hint="输入用户名"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="清空排位"
+        android:id="@+id/clear"/>
 
-</LinearLayout>
+</RelativeLayout>
